# mocap-environments

./: .gitmodules  .pylintrc  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
mocap_environments/: visualization.py
mocap_environments/data/: simple_humanoid_amass.py  simple_humanoid_amass_test.py
mocap_environments/environments/: humanoid_motion_playback.py  humanoid_motion_tracking.py
mocap_environments/experts/: mjpc_expert.py  mjpc_expert_test.py
mocap_environments/retargeting/: babel.py  dm_control_walker.py  inverse_kinematics.py  problematic_sequences.py  run.py  run_for_mdm_output.py  run_lib.py  run_render_tracking_motions.py  run_retarget_for_dagger.py  run_track_keyframe_motions.py  smpl.py
mocap_environments/retargeting/physically_implausible_sequences/: chair-index.txt  external-force-index.txt  hang-index.txt  lean-index.txt  manually-verified-physically-plausible-index.txt  not-chair-index.txt  not-platform-index.txt  not-treadmill-index.txt  platform-index.txt  skate-index.txt  soft-ground-index.txt  swim-index.txt  treadmill-index.txt
mocap_environments/tasks/: motion_tracking_mjpc_task.xml  playback.py  tracking.py  tracking_test.py
mocap_environments/utils/: git.py  video.py
mocap_environments/visualization/: video.py
mocap_environments/walkers/: __init__.py  cmu_humanoid.py  cmu_humanoid.xml  cmu_humanoid_test.py  simple_humanoid.py  simple_humanoid.xml  simple_humanoid_test.py  smpl_humanoid-v1.xml  smpl_humanoid.py  smpl_humanoid.xml  smpl_humanoid_test.py
(+12 files in other folders)
